--- a/com/resources/templates/login.HTML
+++ b/com/resources/templates/login.HTML
@@ -14,9 +14,9 @@
             <input type="password" name="password" placeholder="Password" required><br>
             <button type="submit">Login</button>
         </form>
-        <% if(request.getParameter("error") != null) { %>
+        <!-- <% if(request.getParameter("error") != null) { %>
             <p style="color:red;">Invalid credentials, please try again.</p>
-        <% } %>
+        <% } %> -->
     </div>
 </body>
 </html>
